Correct home nav link spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -287,12 +287,14 @@ input[type='text'],input[type='number'],select,textarea
 
 .aboutuslinka
 {
-  width: 150px;
+  width: 200px;
   height: 60px;
   background-color:  rgb(66, 139, 202);
   display: inline-block;
   padding-left: 10px;
   padding-right: 10px;
+
+  padding-top: 17px;
 }
 
 .aboutuslinka:hover
@@ -302,9 +304,8 @@ input[type='text'],input[type='number'],select,textarea
 
 .aboutuslink a
 {
-  text-align: center;
   color: #FFFFFF;
-  vertical-align: center;
+  text-align: center;
 }
 
 .mobilegreet
@@ -1583,7 +1584,7 @@ input[type='text'],input[type='number'],select,textarea
 @media (max-width: 992px) and (min-width: 768px){
   .aboutuslinka
   {
-    width: 120px;
+    width: 180px;
     height: 60px;
     background-color:  rgb(66, 139, 202);
     display: inline-block;
